# llm-rpg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
config/: game_config.yaml
docs/: game_info.md
docs/systems/: combat.md  enemy_generation.md  llm_judgments.md  progression.md  stats_and_classes.md
src/llm_rpg/: __main__.py
src/llm_rpg/assets/fonts/: license.txt
src/llm_rpg/assets/sprites/: logo.json
src/llm_rpg/assets/word_lists/: characters.txt  objects.txt  places.txt
src/llm_rpg/game/: game.py  game_config.py
src/llm_rpg/llm/: llm.py
src/llm_rpg/objects/: character.py  item.py
src/llm_rpg/scenes/: factory.py  scene.py  state.py
src/llm_rpg/scenes/battle/: battle_scene.py
src/llm_rpg/scenes/battle/battle_states/: battle_end_state.py  battle_enemy_result_state.py  battle_enemy_thinking_state.py  battle_hero_result_state.py  (+5 more)
src/llm_rpg/scenes/main_menu/: main_menu_scene.py
src/llm_rpg/scenes/resting_hub/: resting_hub_scene.py
src/llm_rpg/sprite_generator/: sprite_generator.py
src/llm_rpg/systems/battle/: action_judges.py  action_narrators.py  battle_ai.py  battle_log.py  damage_calculator.py  enemy.py  enemy_action_generators.py  enemy_generator.py  enemy_scaling.py
src/llm_rpg/systems/generation/: enemy_generator.py
src/llm_rpg/systems/hero/: hero.py
src/llm_rpg/ui/: backgrounds.py  battle_ui.py  components.py
src/llm_rpg/utils/: assets.py  sprites.py  theme.py  ui.py
tests/llm_rpg/systems/: test_creativity_tracker.py  test_damage_calculator.py  test_enemy_scaling.py  test_focus_limit.py
(+10 files in other folders)
